# AI-manager

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  event_bus.rs  health.rs  lib.rs  main.rs  service_manager.rs
crates/core/src/handlers/: llm_response.rs  mod.rs  system_events.rs  user_input.rs
crates/data-service/: Cargo.toml
crates/data-service/src/: connection.rs  lib.rs  migrations.rs  models.rs  repository.rs
crates/external-service/: Cargo.toml
crates/external-service/src/: calendar.rs  email.rs  lib.rs  notifications.rs
crates/llm-service/: Cargo.toml
crates/llm-service/src/: claude.rs  lib.rs  openai.rs  prompt_manager.rs  provider.rs  usage_tracker.rs
crates/shared/: .env.example  Cargo.toml
crates/shared/config/: default.toml
crates/shared/src/: constants.rs  errors.rs  lib.rs  messages.rs  types.rs
docs/: architecture.md  development-plan.md  project-structure.md  requirements.md  tech-stack.md
docs/progress_reports/: 01_report.md  02_report.md  03_report.md  04_report.md
scripts/: build.sh  ci-local.sh  dev.sh  setup.sh  test.sh  ui-dev.sh
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: README.md
ui/src-tauri/src/: lib.rs  main.rs
