[workspace]
members = [
    "crates/core",
    "crates/llm-service",
    "crates/data-service",
    "crates/external-service",
    "crates/shared",
    "ui/src-tauri",
]

resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database (multiple DB support)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration management
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Additional dependencies
async-trait = "0.1"
dotenv = "0.15"
