[package]
name = "ai-manager-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-manager-core"
path = "src/main.rs"

[dependencies]
ai-manager-shared = { path = "../shared" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
