[package]
name = "ai-manager-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-manager-shared = { path = "../shared" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }