[package]
name = "ai-manager-ui"
version = "0.1.0"
description = "AI Manager Desktop Application"
authors = ["AI Manager Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
ai-manager-shared = { path = "../../crates/shared" }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "ai-manager-ui"
path = "src/main.rs"